--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,33 +1,41 @@
 plugins {
-    // id for library
-    // id for maven to publish jar to local repository
+    id  'java-library'
+    id 'maven-publish'
 }
 
 java {
-// provide sourceCompatibility
+    sourceCompatibility = "1.8"
 }
 
 repositories {
-// provide repository, where required dependencies are located
-}
+    mavenCentral()}
 
 publishing {
     publications {
         maven(MavenPublication) {
-// provide groupId
-// provide artifactId
-// provide version
+            groupId  'com.epam.utils'
+            artifactId  'utils'
+            version  '1.3.5'
 
             from components.java
         }
     }
 }
 
-//add Apache Apache Commons Lang 3.10 (or higher) dependency
+dependencies {
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
+
+}
 
 jar {
     manifest {
-        //provide manifest with such attributes as 'Implementation-Title', 'Implementation-Version'
+        attributes(
+                'Implementation-Title': 'Utils',
+                'Main-Class': 'com.epam.utils.StringUtils',
+                'Implementation-Version': '1.3.5'
+        )
+        baseName 'utils'
+        version '1.3.5'
     }
 }
 
